@@ -353,3 +353,16 @@ section.align-items-stretch .elementor-widget-container {
     filter: drop-shadow(-0.0625rem 0.0625rem 0 rgba(0, 0, 0, 0.1));
   }
 }
+
+.WcoCategoryWidget {
+  // border: 1px solid red;
+
+  .header {
+    border-bottom: 2px solid black;
+  }
+
+  ol {
+    list-style-type: none;
+  }
+}
+
